# restore

TX1_tracking/1_origin/zed_tracking/: CMakeLists.txt
TX1_tracking/1_origin/zed_tracking/src/: STCTracker.cpp  STCTracker.h  zed_tracking_node.cpp
XY_RL/1XY_RL_origin/logs/: events.out.tfevents.1516623646.zq610-DeepLearning  events.out.tfevents.1516869639.zq610-DeepLearning  events.out.tfevents.1516869677.zq610-DeepLearning  events.out.tfevents.1516869725.zq610-DeepLearning  events.out.tfevents.1516869804.zq610-DeepLearning
XY_RL/4XY_RL_fixed/: RL_brain.py  maze_env.py
XY_RL/5_four_input/: maze_env.py  run_this.py
XY_RL/8_before_4.23_without_XY_change/: RL_brain.py  maze_env.py  run_this.py
catkin_ws/17-11-16/LPH/: cv2  np  rospy  sys
catkin_ws/17-11-16/LPH/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/17-11-16/LPH/src/cv_image_wyz/: CMakeLists.txt
catkin_ws/17-11-16/wyz2_ws/devel/: .rosinstall  setup.sh
catkin_ws/17-11-16/wyz_ws/src/tld/: package.xml
catkin_ws/1wyz_ws_fromTX1_running/: launch_camera.sh  launch_video.sh
catkin_ws/1wyz_ws_fromTX1_running/devel/: .rosinstall
catkin_ws/1wyz_ws_fromTX1_running/devel/lib/tld/: run_tld
catkin_ws/1wyz_ws_fromTX1_running/src/fasterrcnn/scripts/: .demo_video.py.swp
catkin_ws/1wyz_ws_fromTX1_running/src/fasterrcnn/src/: talker_test.cpp
catkin_ws/1wyz_ws_fromTX1_running/src/tld/: CMakeLists.txt
catkin_ws/1wyz_ws_fromTX1_running/src/tld/src/: .run_tld.cpp.swp  run_tld.cpp
catkin_ws/2wyz_ws_can_send_goal/: bounding_boxes.txt
catkin_ws/2wyz_ws_can_send_goal/devel/: setup.sh
catkin_ws/2wyz_ws_can_send_goal/devel/lib/fasterrcnn/: talker_test
catkin_ws/2wyz_ws_can_send_goal/devel/lib/pkgconfig/: test.pc
catkin_ws/2wyz_ws_can_send_goal/src/test/: package.xml
catkin_ws/3wyz_ws_recieve_from _ros/: bounding_boxes.txt  launch_ros_camera.sh
catkin_ws/4wyz_ws_get_from_ros_send_tld/devel/: .catkin
catkin_ws/4wyz_ws_get_from_ros_send_tld_roi/wyz2_ws/: bounding_boxes.txt
catkin_ws/4wyz_ws_get_from_ros_send_tld_roi/wyz2_ws/devel/: .catkin
detect_tracking/18.5.31_first_success/wyz2_ws/: launch_ros_camera.sh
detect_tracking/18.5.31_first_success/wyz2_ws/devel/: .catkin  .rosinstall  setup.sh
detect_tracking/18.5.31_first_success/wyz_ws/devel/: .catkin  .rosinstall  setup.sh
(+245 files in other folders)
